# PHILOW

./: .readthedocs.yaml  LICENSE  README.md  _README.md  _requirements.txt  dock.py  launcher_simple.py  mkdocs.yml  models.py  napari_view_simple.py  predict.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  train.py  utils.py
docs/: conf.py  index.md  index.rst  installation.rst  requirements.txt  usage.rst
legacy/: launcher_simple.py  napari_view_simple.py  train.py
notebooks/: train.ipynb  train_and_pred.ipynb  train_and_pred_using_PHILOW.ipynb
src/napari_philow/: __init__.py  _annotation.py  _data_manager.py  _dock_widget.py  _models.py  _predict.py  _prediction.py  _selector.py  _train.py  _trainer.py  _utils.py  _utils_legacy.py  napari.yaml
src/napari_philow/_tests/: test_dock_widget.py
src/napari_philow/segmentation/: data_augmentation.py  dataset.py  loss.py  metric.py  predict.py  train.py  utils.py
