[metadata]
name = napari-PHILOW
version = 0.0.1
author = Hiroki Kawai
author_email = h.kawai888@gmail.com
url = https://github.com/neurobiology-ut/PHILOW
license = BSD-3-Clause
description = PHILOW is an interactive deep learning-based platform for 3D datasets
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    tensorflow
    numpy
    scikit-image
    dask-image
    opencv-python
    matplotlib
    napari-tools-menu
    pandas

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-PHILOW = napari_philow
