[metadata]
name = napari-PHILOW
version = 0.2.0
author = Hiroki Kawai
author_email = h.kawai888@gmail.com
url = https://github.com/neurobiology-ut/PHILOW
license = BSD 3-Clause
license_files = LICENSE
description = PHILOW is an interactive deep learning-based platform for 3D datasets
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Image Processing

project_urls =
    Bug Tracker = https://github.com/neurobiology-ut/PHILOW/issues
    Documentation = https://github.com/neurobiology-ut/PHILOW#README.md
    Source Code = https://github.com/neurobiology-ut/PHILOW
    User Support = https://github.com/neurobiology-ut/PHILOW/issues

[options]
packages = find:
# add your package requirements here
install_requires =
	numpy
	scikit-image
	dask-image
	opencv-python
	matplotlib
	pandas
	torch
	torchvision
    segmentation-models-pytorch

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
	napari-PHILOW = napari_philow:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml

